# ultimate_mcp_client

./: .env-example  .gitignore  AGENT.md  AGENTS.md  AGENTS_RESEARCH.md  README.md  TODO.md  agent_master_loop.py  agent_master_loop_technical_analysis.md  direct_test.py  eidetic_engine_paper.md  maestro_paper.md  mcp_client.py  mcp_client_enhanced_ui.html  mcp_client_multi.py  mcp_client_multi_ui.html  mcp_client_multi_with_responses_api.py  mcp_client_ui.html  pyproject.toml  robust_agent_loop.py
.beads/: issues.jsonl
.github/workflows/: ci.yml  release.yml
debug_scripts/: direct_test.py  direct_test_filesystem.py  llm_gateway_test.py
